J'ai trouvé comment numérifier

--- a/bayesModel.ipynb
+++ b/bayesModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,59 +16,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"participants_dataset.csv\")\n",
-    "important_columns = [\"sex\",\"age_cat\", \"juv_fel_count\", \"juv_misd_count\", \"juv_other_count\",\"priors_count\",\"c_charge_degree\", \"c_charge_desc\", \"is_recid\",\"label\", \"c_jail_out\", \"c_jail_in\", \"r_charge_degree\", \"r_charge_desc\", \"is_violent_recid\", \"vr_charge_degree\", \"vr_charge_desc\", \"score_text\", \"v_score_text\", \"label\"]\n",
-    "df_filtered = df.loc[:, important_columns]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = [\"sex\",\"age_cat\", \"juv_fel_count\", \"juv_misd_count\", \"juv_other_count\",\"priors_count\",\"c_charge_degree\", \"c_charge_desc\", \"is_recid\",\"label\", \"c_jail_out\", \"c_jail_in\", \"r_charge_degree\", \"r_charge_desc\", \"is_violent_recid\", \"vr_charge_degree\", \"vr_charge_desc\", \"score_text\", \"v_score_text\"]\n",
-    "X = df.loc[:, features]\n",
-    "y = df.loc[:, ['label']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7214, 19)\n",
-      "(7214, 1)\n",
-      "19\n",
-      "(5410, 19)\n",
-      "(5410, 1)\n",
-      "(1804, 19)\n",
-      "(1804, 1)\n"
+      "0         Male\n",
+      "1         Male\n",
+      "2         Male\n",
+      "3         Male\n",
+      "4       Female\n",
+      "         ...  \n",
+      "7209    Female\n",
+      "7210      Male\n",
+      "7211      Male\n",
+      "7212      Male\n",
+      "7213      Male\n",
+      "Name: sex, Length: 7214, dtype: object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7w/n5vwzpw92611yygtkl127dpm0000gn/T/ipykernel_3392/817460035.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, train_size = .75)\n",
-    "print(X.shape)\n",
-    "print(y.shape)\n",
-    "print(len(features))\n",
-    "print(X_train.shape)\n",
-    "print(y_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(y_test.shape)\n"
+    "df = pd.read_csv(\"participants_dataset.csv\")\n",
+    "important_columns = [\"sex\",\"age_cat\", \"juv_fel_count\", \"juv_misd_count\", \"juv_other_count\",\"priors_count\",\"c_charge_degree\", \"c_charge_desc\", \"is_recid\",\"label\", \"c_jail_out\", \"c_jail_in\", \"r_charge_degree\", \"r_charge_desc\", \"is_violent_recid\", \"vr_charge_degree\", \"vr_charge_desc\", \"score_text\", \"v_score_text\", \"label\"]\n",
+    "df_filtered = df.loc[:, important_columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       0\n",
+      "1       0\n",
+      "2       0\n",
+      "3       0\n",
+      "4       1\n",
+      "       ..\n",
+      "7209    1\n",
+      "7210    0\n",
+      "7211    0\n",
+      "7212    0\n",
+      "7213    0\n",
+      "Name: sex, Length: 7214, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n",
+    "df['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n",
+    "print(df.sex)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [\"sex\",\"age_cat\", \"juv_fel_count\", \"juv_misd_count\", \"juv_other_count\",\"priors_count\",\"c_charge_degree\", \"c_charge_desc\", \"is_recid\",\"label\", \"c_jail_out\", \"c_jail_in\", \"r_charge_degree\", \"r_charge_desc\", \"is_violent_recid\", \"vr_charge_degree\", \"vr_charge_desc\", \"score_text\", \"v_score_text\"]\n",
+    "X = df_filtered.loc[:, features]\n",
+    "y = df_filtered.loc[:, ['label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0, train_size = .75)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3,random_state=109)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +129,7 @@
     }
    ],
    "source": [
+    "\n",
     "reg = DecisionTreeRegressor(max_depth = 2, random_state = 0)\n",
     "reg.fit(X_train, y_train)"
    ]
