--- a/bayesModel.ipynb
+++ b/bayesModel.ipynb
@@ -16,48 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0         Male\n",
-      "1         Male\n",
-      "2         Male\n",
-      "3         Male\n",
-      "4       Female\n",
-      "         ...  \n",
-      "7209    Female\n",
-      "7210      Male\n",
-      "7211      Male\n",
-      "7212      Male\n",
-      "7213      Male\n",
-      "Name: sex, Length: 7214, dtype: object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/7w/n5vwzpw92611yygtkl127dpm0000gn/T/ipykernel_3392/817460035.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"participants_dataset.csv\")\n",
     "important_columns = [\"sex\",\"age_cat\", \"juv_fel_count\", \"juv_misd_count\", \"juv_other_count\",\"priors_count\",\"c_charge_degree\", \"c_charge_desc\", \"is_recid\",\"label\", \"c_jail_out\", \"c_jail_in\", \"r_charge_degree\", \"r_charge_desc\", \"is_violent_recid\", \"vr_charge_degree\", \"vr_charge_desc\", \"score_text\", \"v_score_text\", \"label\"]\n",
-    "df_filtered = df.loc[:, important_columns]"
+    "df_filtered = df.loc[:, important_columns]\n",
+    "print(df.age_cat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -65,24 +36,26 @@
      "output_type": "stream",
      "text": [
       "0       0\n",
-      "1       0\n",
+      "1       1\n",
       "2       0\n",
-      "3       0\n",
+      "3       2\n",
       "4       1\n",
       "       ..\n",
-      "7209    1\n",
-      "7210    0\n",
-      "7211    0\n",
-      "7212    0\n",
-      "7213    0\n",
-      "Name: sex, Length: 7214, dtype: int64\n"
+      "7209    0\n",
+      "7210    1\n",
+      "7211    1\n",
+      "7212    1\n",
+      "7213    2\n",
+      "Name: age_cat, Length: 7214, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "df['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n",
-    "df['sex'].replace(['Male', 'Female'],[0, 1], inplace=True)\n",
-    "print(df.sex)\n"
+    "df['age_cat'].replace(['Greater than 45', '25 - 45', 'Less than 25'],[0, 1,2], inplace=True)\n",
+    "df['c_charge_count'].replace(['M', 'F'],[0, 1], inplace=True)\n",
+    "df['c_charge_desc'].replace(['False Imprisonment', 'Battery', 'DUI Level 0.15 Or Minor In Veh', 'arrest case no charge', ''],[0, 1], inplace=True)\n",
+    "print(df.age_cat)\n"
    ]
   },
   {
