--- a/convictUnfiltered.ipynb
+++ b/convictUnfiltered.ipynb
@@ -484,9 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-
-   "display_name": "Python 3.10.7 64-bit",
-
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -500,15 +498,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
-
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
-
+    "hash": "2f55a6172f60bc38e698cba447a0c78919d912f1f2df064798e3ce3bbd4ab89d"
    }
   }
  },
