--- a/bayesModel.ipynb
+++ b/bayesModel.ipynb
@@ -9,6 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn import metrics\n",
